WIP Refund Menu

--- a/upload/gamemodes/clockwork_hl2rp/plugins/refunds/plugin.ini
+++ b/upload/gamemodes/clockwork_hl2rp/plugins/refunds/plugin.ini
@@ -1,4 +1,4 @@
 [Plugin]
 name="Refunds Menu";
-author="TheLife";
+author="<font color="c27ba0">TheLife</font>";
 description="Allows staff to receive and manage refund requests.";
